--- a/BlazorClient/Pages/Index.razor
+++ b/BlazorClient/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Market Data Watcher</h1>
 
-Welcome to your new app.
+Welcome to your Market Data Watcher application.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
