--- a/BlazorClient/Shared/NavMenu.razor
+++ b/BlazorClient/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
 		</li>
 
 		<li class="nav-item px-3">
-			<NavLink class="nav-link" href="fetchmarketdata">
+			<NavLink class="nav-link" href="livemarketdata">
 				<span class="oi oi-list-rich" aria-hidden="true"></span>Live market data
 			</NavLink>
 		</li>
